# duckdb-graphar

./: .clang-format  .cppcheckrc  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request.md
.github/workflows/: build-n-test.yml
config/: CMakeLists.txt  extension_config.cmake
config/test/: README.md
config/test/data/git/: Git.yaml  Person.vertex.yaml  Person_knows_Person.edge.yaml
config/test/data/git/edge/Person_knows_Person/ordered_by_source/: vertex_count
config/test/data/git/edge/Person_knows_Person/ordered_by_source/adj_list/part0/: chunk0
config/test/data/git/edge/Person_knows_Person/ordered_by_source/offset/: chunk0
config/test/data/git/vertex/Person/hash_phone_no/: chunk0
config/test/sql/graphar/: graphar_duck.test  read_edges.test  read_vertices.test
docs/: benchmarks.md  functions.md
docs/benchmarks/: git.csv  ldbc-sf-30.csv
include/: duckdb_graphar_extension.hpp  graphar_duck_extension.hpp
include/functions/scalar/: bfs.hpp
include/functions/table/: edges_vertex.hpp  hop.hpp  read_base.hpp  read_edges.hpp  read_vertices.hpp
include/storage/: graphar_catalog.hpp  graphar_schema_entry.hpp  graphar_schema_set.hpp  graphar_storage.hpp  graphar_table_entry.hpp  graphar_table_information.hpp  graphar_table_set.hpp  graphar_transaction.hpp  graphar_transaction_manager.hpp
include/utils/: benchmark.hpp  func.hpp  global_log_manager.hpp
scripts/: run_cppcheck.sh  setup-custom-toolchain.sh
src/: duckdb_graphar_extension.cpp  graphar_duck_extension.cpp
src/functions/scalar/: bfs.cpp
src/functions/table/: edges_vertex.cpp  hop.cpp  read_edges.cpp  read_vertices.cpp
src/include/functions/scalar/: bfs.hpp
src/include/functions/table/: edges_vertex.hpp  hop.hpp  read_base.hpp  read_edges.hpp  read_vertices.hpp
src/include/storage/: graphar_catalog.hpp  graphar_schema_entry.hpp  graphar_table_entry.hpp  graphar_table_information.hpp  graphar_table_set.hpp  graphar_transaction_manager.hpp
src/include/utils/: benchmark.hpp  func.hpp  global_log_manager.hpp
src/storage/: graphar_catalog.cpp  graphar_schema_entry.cpp  graphar_schema_set.cpp  graphar_storage.cpp  graphar_table_entry.cpp  graphar_table_set.cpp  graphar_transaction.cpp  graphar_transaction_manager.cpp
src/utils/: benchmark.cpp  func.cpp  global_log_manager.cpp
test/data/git/edge/Person_knows_Person/ordered_by_dest/: edge_count0
test/data/git/edge/Person_knows_Person/ordered_by_dest/adj_list/part0/: chunk0
test/data/soc-LiveJournal1/: LiveJournal.yaml
test/data/soc-LiveJournal1/edge/Person_knows_Person/ordered_by_dest/: edge_count0  edge_count4  vertex_count
test/data/soc-LiveJournal1/edge/Person_knows_Person/ordered_by_dest/adj_list/part2/: chunk2
test/data/soc-LiveJournal1/edge/Person_knows_Person/ordered_by_dest/offset/: chunk0  chunk1  chunk3  chunk4
test/data/soc-LiveJournal1/edge/Person_knows_Person/ordered_by_source/: edge_count1  edge_count2  edge_count3
test/data/soc-LiveJournal1/edge/Person_knows_Person/ordered_by_source/adj_list/part2/: chunk2
test/data/soc-LiveJournal1/edge/Person_knows_Person/ordered_by_source/offset/: chunk2
test/data/soc-LiveJournal1/vertex/Person/hash_phone_no/: chunk4
test/sql/: attach.test  graphar_duck.test  read_edges.test  read_vertices.test
